--- a/examples/location-server-simulator/pom.xml
+++ b/examples/location-server-simulator/pom.xml
@@ -22,7 +22,7 @@
     <restcomm.diameter.jdiameter.version>1.7.1-157</restcomm.diameter.jdiameter.version>
     <restcomm.diameter.mux.version>1.7.1-157</restcomm.diameter.mux.version>
     <!-- Thirdparty Dependencies Versions -->
-    <slf4j.version>1.5.8</slf4j.version>
+    <slf4j.version>1.7.13</slf4j.version>
     <jbosscache.version>3.2.5.GA</jbosscache.version>
     <commons-pool.version>1.5.5</commons-pool.version>
   </properties>
@@ -48,6 +48,16 @@
         <groupId>commons-pool</groupId>
         <artifactId>commons-pool</artifactId>
         <version>${commons-pool.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.sparkjava</groupId>
+        <artifactId>spark-core</artifactId>
+        <version>2.8.0</version>
+      </dependency>
+      <dependency>
+        <groupId>commons-cli</groupId>
+        <artifactId>commons-cli</artifactId>
+        <version>1.4</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -99,6 +109,16 @@
       <artifactId>map-impl</artifactId>
       <version>${jss7.restcomm.version}</version>
     </dependency>
+    <dependency>
+      <groupId>com.sparkjava</groupId>
+      <artifactId>spark-core</artifactId>
+      <version>2.8.0</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+      <version>1.4</version>
+    </dependency>
   </dependencies>
 
   <profiles>
@@ -148,6 +168,14 @@
           </execution>
         </executions>
       </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+            </configuration>
+        </plugin>
       <plugin>
         <!-- Build an executable JAR -->
         <groupId>org.apache.maven.plugins</groupId>
