--- a/core/jdiameter/impl/pom.xml
+++ b/core/jdiameter/impl/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.mobicents.diameter</groupId>
     <artifactId>jdiameter-parent</artifactId>
-    <version>1.7.1-157</version>
+    <version>1.7.4-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
@@ -46,17 +46,24 @@
     <dependency>
       <groupId>org.mobicents.protocols.sctp</groupId>
       <artifactId>sctp-impl</artifactId>
-      <version>2.0.2-12</version>
+      <version>2.0.2-13</version>
     </dependency>
     <dependency>
       <groupId>org.mobicents.protocols.sctp</groupId>
       <artifactId>sctp-api</artifactId>
-      <version>2.0.2-12</version>
+      <version>2.0.2-13</version>
     </dependency>
     <dependency>
       <groupId>io.netty</groupId>
       <artifactId>netty-all</artifactId>
       <version>4.0.36.Final</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>7.4.0</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
