--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>org.mobicents.diameter</groupId>
   <artifactId>diameter-parent</artifactId>
-  <version>1.7.1-157</version>
+  <version>1.7.4-SNAPSHOT</version>
 
   <packaging>pom</packaging>
 
@@ -31,7 +31,11 @@
     <checkstyle.consoleOutput>true</checkstyle.consoleOutput>
     <checkstyle.failOnError>true</checkstyle.failOnError>
     <version.com.puppycrawl.tools.checkstyle>6.18</version.com.puppycrawl.tools.checkstyle>
+    <compiler.plugin.version>3.8.1</compiler.plugin.version>
+    <maven-release-plugin.version>3.0.0-M4</maven-release-plugin.version>
+    <mobicents.tools.mavenplugin.eclipse.version>1.0.1.FINAL</mobicents.tools.mavenplugin.eclipse.version>
     <compile.source>11</compile.source>
+    <!--compile.source>1.8</compile.source-->
 
     <!--<version.cluster>1.15.0-SNAPSHOT</version.cluster>-->
   </properties>
@@ -54,6 +58,33 @@
       <email>baranowb@gmail.com</email>
       <organization>TeleStax</organization>
       <organizationUrl>http://www.telestax.com/</organizationUrl>
+      <roles>
+        <role>Developer</role>
+      </roles>
+      <timezone>+1</timezone>
+    </developer>
+    <developer>
+      <id>FerUy</id>
+      <name>Fernando Mendioroz</name>
+      <email>fernando.mendioroz@gmail.com</email>
+      <roles>
+        <role>Active Developer</role>
+      </roles>
+      <timezone>-3</timezone>
+    </developer>
+    <developer>
+      <id>joram15</id>
+      <name>Joram Herrera</name>
+      <email>joram.herrera2@gmail.com</email>
+      <roles>
+        <role>Active Developer</role>
+      </roles>
+      <timezone>-6</timezone>
+    </developer>
+    <developer>
+      <id>aferreiraguido</id>
+      <name>Alejandro Ferreira Guido</name>
+      <email>aferreiraguido@gmail.com</email>
       <roles>
         <role>Developer</role>
       </roles>
@@ -88,19 +119,20 @@
         <artifactId>nexus-staging-maven-plugin</artifactId>
         <version>1.6.7</version>
         <extensions>true</extensions>
-        <configuration>
+        <configuration combine.self="override" />
+        <!--configuration>
           <serverId>restcomm-releases-repository</serverId>
           <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-        </configuration>
+        </configuration-->
         <executions>
           <execution>
             <id>deploy-to-sonatype</id>
-            <phase>deploy</phase>
-            <goals>
+            <phase>none</phase>
+            <!--goals>
               <goal>deploy</goal>
-              <!--goal>close</goal-->
+              <goal>close</goal>
               <goal>release</goal>
-            </goals>
+            </goals-->
           </execution>
         </executions>
       </plugin>
@@ -200,7 +232,7 @@
           <useFile />
         </configuration>
         <dependencies>
-           <dependency>
+          <dependency>
             <groupId>com.puppycrawl.tools</groupId>
             <artifactId>checkstyle</artifactId>
             <version>${version.com.puppycrawl.tools.checkstyle}</version>
@@ -216,6 +248,9 @@
       <plugin>
         <artifactId>maven-eclipse-plugin</artifactId>
         <groupId>org.mobicents.tools</groupId>
+        <version>
+          ${mobicents.tools.mavenplugin.eclipse.version}
+        </version>
         <inherited>false</inherited>
         <executions />
         <configuration>
@@ -226,6 +261,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>${compiler.plugin.version}</version>
         <configuration>
           <source>${compile.source}</source>
           <target>${compile.source}</target>
@@ -265,6 +301,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-release-plugin</artifactId>
+            <version>${maven-release-plugin.version}</version>
             <configuration>
               <autoVersionSubmodules>false</autoVersionSubmodules>
               <resume>false</resume>
@@ -282,10 +319,15 @@
         <plugins>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-release-plugin</artifactId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>${compiler.plugin.version}</version>
             <configuration>
-              <autoVersionSubmodules>false</autoVersionSubmodules>
-              <resume>false</resume>
+              <source>${compile.source}</source>
+              <target>${compile.source}</target>
+              <!--debug>${compile.debug}</debug-->
+              <compilerArgs>
+                <arg>--add-exports</arg><arg>java.base/sun.net.util=ALL-UNNAMED</arg>
+              </compilerArgs>
             </configuration>
           </plugin>
         </plugins>
